syntax = "proto3";

// Provides the ablility to query the Pyroscope database. Most of the calls in
// this group are considered public.
package querier.v1;

import "gnostic/openapi/v3/annotations.proto";
import "google/v1/profile.proto";
import "types/v1/types.proto";

service QuerierService {
  // ProfileType returns a list of the existing profile types.
  rpc ProfileTypes(ProfileTypesRequest) returns (ProfileTypesResponse) {
    option (gnostic.openapi.v3.operation).tags = "scope/public";
  }
  // LabelValues returns the existing label values for the provided label names.
  rpc LabelValues(types.v1.LabelValuesRequest) returns (types.v1.LabelValuesResponse) {
    option (gnostic.openapi.v3.operation).tags = "scope/public";
  }
  // LabelNames returns a list of the existing label names.
  rpc LabelNames(types.v1.LabelNamesRequest) returns (types.v1.LabelNamesResponse) {
    option (gnostic.openapi.v3.operation).tags = "scope/public";
  }
  // Series returns profiles series matching the request. A series is a unique
  // label set.
  rpc Series(SeriesRequest) returns (SeriesResponse) {
    option (gnostic.openapi.v3.operation).tags = "scope/public";
  }
  // SelectMergeStacktraces returns matching profiles aggregated in a flamegraph
  // format. It will combine samples from within the same callstack, with each
  // element being grouped by its function name.
  rpc SelectMergeStacktraces(SelectMergeStacktracesRequest) returns (SelectMergeStacktracesResponse) {
    option (gnostic.openapi.v3.operation).tags = "scope/public";
  }
  // SelectMergeSpanProfile returns matching profiles aggregated in a flamegraph
  // format. It will combine samples from within the same callstack, with each
  // element being grouped by its function name.
  rpc SelectMergeSpanProfile(SelectMergeSpanProfileRequest) returns (SelectMergeSpanProfileResponse) {
    option (gnostic.openapi.v3.operation).tags = "scope/public";
  }
  // SelectMergeProfile returns matching profiles aggregated in pprof format. It
  // will contain all information stored (so including filenames and line
  // number, if ingested).
  rpc SelectMergeProfile(SelectMergeProfileRequest) returns (google.v1.Profile) {
    option (gnostic.openapi.v3.operation).tags = "scope/public";
  }
  // SelectSeries returns a time series for the total sum of the requested
  // profiles.
  rpc SelectSeries(SelectSeriesRequest) returns (SelectSeriesResponse) {
    option (gnostic.openapi.v3.operation).tags = "scope/public";
  }

  // Diff returns a diff of two profiles
  rpc Diff(DiffRequest) returns (DiffResponse) {
    option (gnostic.openapi.v3.operation).tags = "scope/public";
  }

  // GetProfileStats returns profile stats for the current tenant.
  rpc GetProfileStats(types.v1.GetProfileStatsRequest) returns (types.v1.GetProfileStatsResponse) {
    option (gnostic.openapi.v3.operation).tags = "scope/internal";
  }
  rpc AnalyzeQuery(AnalyzeQueryRequest) returns (AnalyzeQueryResponse) {
    option (gnostic.openapi.v3.operation).tags = "scope/internal";
  }
}

message ProfileTypesRequest {
  // Milliseconds since epoch. If missing or zero, only the ingesters will be
  // queried.
  int64 start = 1 [(gnostic.openapi.v3.property).example = {yaml: "1676282400000"}];
  // Milliseconds since epoch. If missing or zero, only the ingesters will be
  // queried.
  int64 end = 2 [(gnostic.openapi.v3.property).example = {yaml: "1676289600000"}];
}

message ProfileTypesResponse {
  repeated types.v1.ProfileType profile_types = 1;
}

message SeriesRequest {
  // List of label selector to apply to the result.
  repeated string matchers = 1 [(gnostic.openapi.v3.property).example = {yaml: "['{namespace=\"my-namespace\"}']"}];
  // List of label_names to request. If empty will return all label names in the
  // result.
  repeated string label_names = 2;
  // Milliseconds since epoch. If missing or zero, only the ingesters will be
  // queried.
  int64 start = 3 [(gnostic.openapi.v3.property).example = {yaml: "1676282400000"}];
  // queried.
  int64 end = 4 [(gnostic.openapi.v3.property).example = {yaml: "1676289600000"}];
}

message SeriesResponse {
  repeated types.v1.Labels labels_set = 2;
}

message SelectMergeStacktracesRequest {
  // Profile Type ID string in the form
  // <name>:<type>:<unit>:<period_type>:<period_unit>.
  string profile_typeID = 1 [(gnostic.openapi.v3.property).example = {yaml: "process_cpu:cpu:nanoseconds:cpu:nanoseconds"}];
  // Label selector string
  string label_selector = 2 [(gnostic.openapi.v3.property).example = {yaml: "'{namespace=\"my-namespace\"}'"}];
  // Milliseconds since epoch.
  int64 start = 3 [(gnostic.openapi.v3.property).example = {yaml: "1676282400000"}];
  // Milliseconds since epoch.
  int64 end = 4 [(gnostic.openapi.v3.property).example = {yaml: "1676289600000"}];
  // Limit the nodes returned to only show the node with the max_node's biggest
  // total
  optional int64 max_nodes = 5;
  // Profile format specifies the format of profile to be returned.
  // If not specified, the profile will be returned in flame graph format.
  ProfileFormat format = 6;
  // Select stack traces that match the provided selector.
  optional types.v1.StackTraceSelector stack_trace_selector = 7;
}

enum ProfileFormat {
  PROFILE_FORMAT_UNSPECIFIED = 0;
  PROFILE_FORMAT_FLAMEGRAPH = 1;
  PROFILE_FORMAT_TREE = 2;
}

message SelectMergeStacktracesResponse {
  FlameGraph flamegraph = 1;
  // Pyroscope tree bytes.
  bytes tree = 2;
}

message SelectMergeSpanProfileRequest {
  // Profile Type ID string in the form
  // <name>:<type>:<unit>:<period_type>:<period_unit>.
  string profile_typeID = 1 [(gnostic.openapi.v3.property).example = {yaml: "process_cpu:cpu:nanoseconds:cpu:nanoseconds"}];
  // Label selector string
  string label_selector = 2 [(gnostic.openapi.v3.property).example = {yaml: "'{namespace=\"my-namespace\"}'"}];
  // List of Span IDs to query
  repeated string span_selector = 3 [(gnostic.openapi.v3.property).example = {yaml: "['9a517183f26a089d','5a4fe264a9c987fe']"}];
  // Milliseconds since epoch.
  int64 start = 4 [(gnostic.openapi.v3.property).example = {yaml: "1676282400000"}];
  // Milliseconds since epoch.
  int64 end = 5 [(gnostic.openapi.v3.property).example = {yaml: "1676289600000"}];
  // Limit the nodes returned to only show the node with the max_node's biggest
  // total
  optional int64 max_nodes = 6;
  // Profile format specifies the format of profile to be returned.
  // If not specified, the profile will be returned in flame graph format.
  ProfileFormat format = 7;
}

message SelectMergeSpanProfileResponse {
  FlameGraph flamegraph = 1;
  // Pyroscope tree bytes.
  bytes tree = 2;
}

message DiffRequest {
  SelectMergeStacktracesRequest left = 1;
  SelectMergeStacktracesRequest right = 2;
}

message DiffResponse {
  FlameGraphDiff flamegraph = 1;
}

message FlameGraph {
  repeated string names = 1;
  repeated Level levels = 2;
  int64 total = 3;
  int64 max_self = 4;
}

message FlameGraphDiff {
  repeated string names = 1;
  repeated Level levels = 2;
  int64 total = 3;
  int64 max_self = 4;

  int64 leftTicks = 5;
  int64 rightTicks = 6;
}

message Level {
  repeated int64 values = 1;
}

message SelectMergeProfileRequest {
  // Profile Type ID string in the form
  // <name>:<type>:<unit>:<period_type>:<period_unit>.
  string profile_typeID = 1 [(gnostic.openapi.v3.property).example = {yaml: "process_cpu:cpu:nanoseconds:cpu:nanoseconds"}];
  // Label selector string
  string label_selector = 2 [(gnostic.openapi.v3.property).example = {yaml: "'{namespace=\"my-namespace\"}'"}];
  // Milliseconds since epoch.
  int64 start = 3 [(gnostic.openapi.v3.property).example = {yaml: "1676282400000"}];
  // Milliseconds since epoch.
  int64 end = 4 [(gnostic.openapi.v3.property).example = {yaml: "1676289600000"}];
  // Limit the nodes returned to only show the node with the max_node's biggest
  // total
  optional int64 max_nodes = 5;
  // Select stack traces that match the provided selector.
  optional types.v1.StackTraceSelector stack_trace_selector = 6;
}

message SelectSeriesRequest {
  // Profile Type ID string in the form
  // <name>:<type>:<unit>:<period_type>:<period_unit>.
  string profile_typeID = 1 [(gnostic.openapi.v3.property).example = {yaml: "process_cpu:cpu:nanoseconds:cpu:nanoseconds"}];
  // Label selector string
  string label_selector = 2 [(gnostic.openapi.v3.property).example = {yaml: "'{namespace=\"my-namespace\"}'"}];
  // Milliseconds since epoch.
  int64 start = 3 [(gnostic.openapi.v3.property).example = {yaml: "1676282400000"}];
  // Milliseconds since epoch.
  int64 end = 4 [(gnostic.openapi.v3.property).example = {yaml: "1676289600000"}];
  repeated string group_by = 5 [(gnostic.openapi.v3.property).example = {yaml: "['pod']"}];
  double step = 6;
  // Query resolution step width in seconds
  optional types.v1.TimeSeriesAggregationType aggregation = 7;
  // Select stack traces that match the provided selector.
  optional types.v1.StackTraceSelector stack_trace_selector = 8;
  // Select the top N series by total value.
  optional int64 limit = 9;
}

message SelectSeriesResponse {
  repeated types.v1.Series series = 1;
}

message AnalyzeQueryRequest {
  int64 start = 2;
  int64 end = 3;
  string query = 4;
}

message AnalyzeQueryResponse {
  repeated QueryScope query_scopes = 1; // detailed view of what the query will require
  QueryImpact query_impact = 2; // summary of the query impact / performance
}

message QueryScope {
  string component_type = 1; // a descriptive high level name of the component processing one part
  // of the query (e.g., "short term storage")
  uint64 component_count = 2; // how many components of this type will process
  // the query (indicator of read-path replication)

  uint64 block_count = 3;
  uint64 series_count = 4;
  uint64 profile_count = 5;
  uint64 sample_count = 6;
  uint64 index_bytes = 7;
  uint64 profile_bytes = 8;
  uint64 symbol_bytes = 9;
}

message QueryImpact {
  uint64 total_bytes_in_time_range = 2;
  uint64 total_queried_series = 3;
  bool deduplication_needed = 4;
}
